--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/noventagrados-gui-lib-2.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/noventagrados-gui-lib-2.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
